# bezier_simplification

./: .gitignore  CMakeLists.txt  README.md  index.html  vcpkg.json
.github/workflows/: deploy.yml
assets/: index-CwZx102Q.js  index-JEPaHV8y.js
demos/: CMakeLists.txt  bezier_simplification_demo.cpp  bezier_simplification_demo.h  read_ipe_bezier_spline.cpp  read_ipe_bezier_spline.h
demos/bezier_simplification/: CMakeLists.txt  bezier_simplification_demo.cpp  bezier_simplification_demo.h
demos/fit_cubic/: CMakeLists.txt  fit_cubic_demo.cpp  fit_cubic_demo.h
demos/intersection_helpers/: CMakeLists.txt  intersection_helpers_demo.cpp  intersection_helpers_demo.h
demos/min_dist/: CMakeLists.txt  min_dist_demo.cpp  min_dist_demo.h
demos/schneider/: CMakeLists.txt  schneider_demo.cpp  schneider_demo.h
demos/spiro/: CMakeLists.txt  spiro_demo.cpp  spiro_demo.h
demos/toposet/: CMakeLists.txt  toposet_demo.cpp  toposet_demo.h
frontend/: CMakeLists.txt  double_slider.h  frontend.cpp  frontend.h  read_graph_gdal.cpp  read_graph_gdal.h  read_ipe_bezier_spline.cpp  read_ipe_bezier_spline.h
react-app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
react-app/src/: App.jsx
react-app/src/wasm/: wasm_frontend.js
test/: CMakeLists.txt  test.cpp
wasm_frontend/: CMakeLists.txt  wasm_frontend.cpp
